--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="new_reminder">new Reminder</string>
     <string name="exit">exit</string>
+    <string name="reminder">Reminder Text</string>
 </resources>
